--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-
-/* body{
+ body{
     background-color:rgb(243, 238, 230);  
     height: 100%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -37,4 +36,4 @@ header h1{
     text-align: center;    
     bottom: 5%; 
     width: 100%;
-  } */
+  }
