--- a/css/style.css
+++ b/css/style.css
@@ -6,25 +6,66 @@
 }
 
 header{
-    text-decoration: underline;
     padding: 10px;
-    margin: 1% 5% 0% 5%;
-    font-size: 45px;
+    margin: 3% 5% 2% 5%;
+    font-size: 25px;
     font-weight: bold;
     color: rgb(53, 39, 36);
     text-align: center;
     display: inline-block;
 }
 
-header h1{
-    padding: 0px 100px 0px 100px;
-    text-align: center;
+#introAboutPatShop {
+    margin: 0% 5% 2% 1%;
 }
 
 
-#moreInfo {
-    position: fixed;     
-    text-align: center;    
-    bottom: 5%; 
+#picScroll img{
+    width: 170px;
+    height: 170px;
+    padding: 2%;
+}
+
+  footer{
+    background-color: rgb(182, 154, 138);
+    text-align: center;
+    color: black;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    font-size: 20px;
+    display: inline-flex;
+    width: 80%;
+    margin-bottom: 2em;
+}
+
+footer h5{
+    font-size: 18px;
+    padding-bottom: 10px;
+}
+
+#hoursOpen{
+    text-align: right;
+    padding: .20%;
+    width: 40%;
+}
+
+footer p{
+    font-size: 15px;
+}
+
+#locations{
+    width: 40%;
+    text-align: left;
+    padding: .5%;
+}
+
+#locations ul {
+    display: inline-flex;
     width: 100%;
-  }
+}
+
+#locationList {
+    font-size: 15px;
+}
