--- a/css/styleSalesInfo.css
+++ b/css/styleSalesInfo.css
@@ -1,7 +1,6 @@
 
 main{
     text-align: center;
-    /* margin-top: 10px; */
     padding-left: 2.5%;
     padding-right: 2.5%;
     max-width: 960;
@@ -27,6 +26,43 @@ main{
         color: white;
     }
 
+
+    #locationAdd-form{
+        width: 100%;
+        display: inline-block;
+        text-align: left;
+        padding: 1%;
+    }
+
+    #locationAdd-fs{        
+        width: 98%;
+        padding-bottom: .5%;
+
+    }
+
+    #CustomerInfo{
+        display: inline-block;
+    }
+
+    input{
+        padding: 5px;
+        font-size: 14px;
+    }
+
+    #locationCustomers-fs{
+        width: 100%;
+        display: inline-flex;
+    }
+
+    button{
+        margin-left: 2%;
+        padding: 5px;
+        font-size: 18px;
+    }
+
+
+
+
 table{
     text-align: center;
     margin-top: 2%;
@@ -40,12 +76,9 @@ table{
     border: black 2px solid;
     background-color:  rgb(166, 166, 184);
     color: white;
-    /* max-width: 10%; */
     text-align: center;
 }
 
-
-/* TABLE BODY (TR: BY EACH LOCATION) */
 
 
 #salesByLocation th{
@@ -63,7 +96,6 @@ table{
     padding-top: .5%;
     padding-bottom: .25%;
     font-style: italic;
-    /* padding: 5px; */
     width: fit-content;
 }
 
@@ -99,14 +131,4 @@ table{
     padding: 10PX;
     color: red;
     width: fit-content;
-}
-
-
-
-
-
-
-#user-form {
-    margin-bottom: 50px;
-    margin-left: 50px;
 }
